WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181173
[Win] Web Inspector: Wrongly placed inspector highlight in HiDPI
https://bugs.webkit.org/show_bug.cgi?id=181173
Summary
[Win] Web Inspector: Wrongly placed inspector highlight in HiDPI
Fujii Hironori
Reported
2017-12-27 02:04:01 PST
Created
attachment 330211
[details]
screenshot of AppleWin port [Win] Web Inspector: Wrongly placed inspector highlight in HiDPI See the screenshot. It happens in both AppleWin port and WinCiaro port. I tested with: WinCiaro port MiniBrowser, Release build, trunk@226292 AppleWin port MiniBrowser, Release build, trunk@226295
Attachments
screenshot of AppleWin port
(83.88 KB, image/png)
2017-12-27 02:04 PST
,
Fujii Hironori
no flags
Details
Patch
(1.33 KB, patch)
2017-12-27 02:27 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-12-27 02:27:37 PST
Created
attachment 330212
[details]
Patch
WebKit Commit Bot
Comment 2
2018-01-02 11:52:39 PST
Comment on
attachment 330212
[details]
Patch Clearing flags on attachment: 330212 Committed
r226329
: <
https://trac.webkit.org/changeset/226329
>
WebKit Commit Bot
Comment 3
2018-01-02 11:52:40 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-01-02 13:18:03 PST
<
rdar://problem/36261352
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug