[Win] Web Inspector: Wrongly placed inspector highlight in HiDPI https://bugs.webkit.org/show_bug.cgi?id=181173

Patch by Fujii Hironori <Hironori.Fujii@sony.com> on 2018-01-02
Reviewed by Alex Christensen.

* WebNodeHighlight.cpp:
(WebNodeHighlight::update): Scale the GraphicsContext.

Canonical link: https://commits.webkit.org/197053@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226329 268f45cc-cd09-0410-ab3c-d52691b4dbfc